Changed main.js: removed vanilla.js, added jquery event attach on click;

--- a/index.html
+++ b/index.html
@@ -27,18 +27,18 @@
     <div class="page-container">
 
         <!-- BUTTON NAV -->
-        <span class="nav-button" ><i class="fas fa-bars nav-button"></i></span>
+        <i class="fas fa-bars nav-button"></i>
 
         <!-- NAV -->
         <nav class="nav">
 
             <ul class="nav-list">
-                <li><a href="#" id="link1">STRONA GŁÓWNA</a></li>
-                <li><a href="#" id="link2">BIOGRAFIA</a></li>
-                <li><a href="#" id="link3">MEDIA</a></li>
-                <li><a href="#" id="link4">OFERTA</a></li>
-                <li><a href="#" id="link5">REFERENCJE</a></li>
-                <li><a href="#" id="link6">KONTAKT</a></li>
+                <li><a href="biografia.html" class="nav-link">STRONA GŁÓWNA</a></li>
+                <li><a href="#" class="nav-link">BIOGRAFIA</a></li>
+                <li><a href="#" class="nav-link">MEDIA</a></li>
+                <li><a href="#" class="nav-link">OFERTA</a></li>
+                <li><a href="#" class="nav-link">REFERENCJE</a></li>
+                <li><a href="#" class="nav-link">KONTAKT</a></li>
             </ul>
 
         </nav>
@@ -56,7 +56,7 @@
 
             <!-- BUTTON DOWN -->
             <a href="#section-mini" class="button-down">
-                <i class="fas fa-chevron-circle-down" class="button-down"></i>
+                <i class="fas fa-chevron-circle-down button-down"></i>
             </a>
 
         </header>
